--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <script src="https://kit.fontawesome.com/53b96738e1.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>Logan Veik</title>
 </head>
 
 <body>
